updates to JL16, added contact

--- a/src/layouts/master.html
+++ b/src/layouts/master.html
@@ -19,6 +19,8 @@
   <section class="sidebar-fixed portfolio">
     <a href="#/" class="exit" onclick="window.JL.achievements.removeScreen()">&times;</a>
     <div class="sidebar_content">
+      <div class="shift-down"></div>
+      <a href="/" class="projects-title">Home</a>
       <a href="/portfolio/" class="projects-title">Portfolio</a>
       <ul class="portfolio-list">
         <a href="/portfolio/jl-v2/">
@@ -64,6 +66,8 @@
           <li>Mobile Beat</li>
         </a>
       </ul>
+      <a href="/contact" class="projects-title">Contact</a>
+
     </div>
   </section>
   <section class="achievements-fixed">
