--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -14,5 +14,5 @@
   </script>
   <link rel="stylesheet" href="/css/1j22f.css">
 </head>
-<body onclick="window.JL.achievements.removeScreen()" ontouchstart>
+<body onclick="window.JL.achievements.removeScreen()" ontouchstart class={{ body }}>
 <div class="wrap-overflow">
