minor css change on monbile

--- a/src/sass/1j22f.scss
+++ b/src/sass/1j22f.scss
@@ -1356,9 +1356,11 @@ body{
     // position: absolute;
     // top: 0;
     &.position-absolute{
-      position: absolute;
-      left: 0;
 
+      @media( min-width: 600px ) {
+        position: absolute;
+        left: 0;
+      }
     }
   }
   a{
