--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -14,5 +14,5 @@
   </script>
   <link rel="stylesheet" href="/css/1j22f.css">
 </head>
-<body onclick="window.JL.achievements.removeScreen()" ontouchstart class="{{ body }}">
+<body onclick="window.JL.achievements.removeScreen()" ontouchstart class="{{ body }}" ondrop="JL.dragDrop.drop(event)" ondragover="JL.dragDrop.allowDrop(event)">
 <div class="wrap-overflow">
