updates to mobile and small touches

--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -5,13 +5,13 @@
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-  <script>
+  <!-- <script>
        (function() {
            'use strict';
            var htmlEle = document.documentElement;
            htmlEle.className = "js hide-js";
        })();
-  </script>
+  </script> -->
   <link rel="stylesheet" href="/css/1j22f.css">
 </head>
 <body onclick="window.JL.achievements.removeScreen()" ontouchstart class="{{ body }}" ondrop="JL.dragDrop.drop(event)" ondragover="JL.dragDrop.allowDrop(event)">
