updates to links

--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -19,8 +19,8 @@
 
 <nav class="footer-nav">
   <a href="/">HOME</a>
-  <a href="/portfolio">PORTFOLIO</a>
-  <a href="/contact">CONTACT</a>
+  <a href="/portfolio/">PORTFOLIO</a>
+  <a href="/contact/">CONTACT</a>
 </nav>
 <footer class="footer" onclick="JL.achievements.launchScreen(event)">
   &copy; 2016 Joey Lea. All Rights Reserved.
