--- a/src/layouts/master.html
+++ b/src/layouts/master.html
@@ -66,7 +66,7 @@
           <li>Mobile Beat</li>
         </a>
       </ul>
-      <a href="/contact" class="projects-title" onclick="window.JL.achievements.externalClose(event)">Contact</a>
+      <a href="/contact/" class="projects-title" onclick="window.JL.achievements.externalClose(event)">Contact</a>
 
     </div>
   </section>
