added tracking code

--- a/src/layouts/master.html
+++ b/src/layouts/master.html
@@ -6,10 +6,10 @@
       <h5 class="resume-highlights-title">Highlights</h5>
       <ul class="resume-highlights">
         <li>Self-motivated fast worker</li>
-        <li>Lead web developer experience</li>
-        <li>A project starter and finisher</li>
+        <!-- <li>Lead web developer</li> -->
+        <li>A project finisher</li>
         <li>Creative, passionate, and design oriented</li>
-        <li>Highly skilled in PHP, JavaScript, HTML5, Sass/CSS, and SQL</li>
+        <li>Skilled in PHP, JavaScript, HTML5, Sass/CSS, and SQL</li>
       </ul>
 
       <a href="/resume.pdf" target="_blank" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('SAAVYRECRUITER')">Download CV</a>
